syntax = "proto3";

package demo.proto;
option java_multiple_files = true;

service DemoService {
    rpc Demo (DemoRequest) returns (DemoResponse);
}

service StreamDemoService {
    rpc StreamDemo (stream DemoRequest) returns (stream DemoResponse) {}
}

message DemoRequest {
    string text = 1;
}

message DemoResponse {
    string text = 1;
}
